app/styles/movie.scss
@import "compass";

$body-type:geneva, "bitstream vera sans", arial, helvetica, sans-serif;
$heading-type:"american typewriter", georgia, serif;

$body-color:#02303f;
$default-text-shadow-color:rgba(gray, .3);

$lightblue:#4A8A9F;
$top-color-stop:#DEEAEE;
$bottom-color-stop:#EFF4F6;
$lightblue-border:#CEDFE5;

$body-padding:40px;

body, h1, h2, h3, p { margin:0; padding:0 }

img {
  border: none;
  &.icon { vertical-align: middle; margin-bottom: 4px; }
}

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display:block;
}

body {
/*  background-image:url('/images/9_2_grid.png');*/
  color:$body-color; background-color:#fdfdfd;
  font:75%/1.5em $body-type;
  padding:0 $body-padding;
}

h1 { font-weight: normal; @include text-shadow; }
h1 a, h2 a { text-decoration:none; }

body > header {
  padding:0 $body-padding; margin:0 (0 - $body-padding);
  border-bottom:1px solid $lightblue-border;
  @include linear-gradient(color-stops($top-color-stop, $bottom-color-stop));

  h1 { font:normal 3em/1.85em $heading-type; letter-spacing:.01em; }
}

@mixin link-icon {
  a {
    text-decoration: none;
    span { text-decoration: underline; }
  }
}

header {
  
  nav, + form { color:$lightblue; }

  nav {
    position:absolute; right:3em; top:1.1em;
    
    p { text-align:right; }

    .login {
      @include link-icon;

      a {
        img { opacity: .5; @include transition(opacity, 0.15s, ease-out); }
        span { @include transition(color, 0.15s, ease-out); }
        &:hover {
          span { color: $body-color; }
          img { opacity: 1; } } } } }

  + form {
    position:absolute; left:29em; top:1.1em;
    
    label { display:block; padding-left:6px; }
 
    input[type="search"] { font-size:11px; width:15em;
      .no-inputsearch & {
        @include box-shadow(rgba(black, .25), 0, 1px, 2px, 0, inset);
        border:1px solid #aaa;
        @include border-radius(10px);
        padding:.15em 8px .05em } }
    input[type="submit"] { display:none }
  }
}

body > article {
  padding-top:2em;

  > h1 {
    font-size:1.5em; line-height:2.2em;
    margin-bottom:1em;
  }
}

/* anchors */
a {
  &:link, &:visited { color:inherit }
  &:hover, &:active { /*color:lemonchiffon; */ } }

header h1 a {
  &:active, &:visited { outline:0 none } }

$poster-small-width: 92px;
$poster-medium-width: 185px;
$poster-margin: 30px;

/* movie list */
ol.movies {
  padding-left: 0;
  @include no-bullets;
  
  a { text-decoration:none }
  
  .movie {
    min-height:180px;
    padding-left: $poster-small-width + $poster-margin;
    
    > a {
      min-height:68px; margin-bottom:.7em;
      &:active, &:visited { outline:0 none }
    }
  
    h1 {
      font-size:2em; line-height:1.15em; letter-spacing:.01em;
      margin-bottom:.3em;
    }
    h1 + .year, h2 { font-size:1.3em; line-height:1.5em }

    .poster {
      display:block;
      margin-left:-($poster-small-width + $poster-margin); margin-top:.3em;
      float:left;
    }
  }
}

.movie {
  @include clearfix;
  
  h1, .year, hgroup { margin:0; font-family:$heading-type; }
  h2 { font-weight:normal; font-style:italic; }
  .year { color:darken($lightblue, 5); font-style:normal; }
  
  .poster { border:1px solid #777; }
  span.poster {
    background: #999;
    @include radial-gradient(color-stops(rgba(white, .5), rgba(white, 0) 150px), top left)
  }
  
  .actions {
    font-size: .9em;
    line-height: 1.7;
    margin-top: 1.6em;
    
    p { margin:0; padding:5px 0; }
    
    .button_to {
      display: inline-block;
      input[type=submit] {
        cursor: pointer;
        font-size: 1em;
        display:inline-block; color:#333;
        padding: 0 4px;
        margin-bottom: 4px;
        line-height: 1.7;
        background-color:#e5e5e5; @include linear-gradient(color-stops(rgba(white, .6), rgba(white, 0)));
        border:1px solid #ddd; @include border-radius;

        &:hover { color:#fdfdfd; border-color:$body-color; background:$body-color }
        
        &.to-watch, &.watched {
          width: 100px;
        }
        
        &[disabled] { background-color: #ccc; color: #666; }
      }
    }
    
    p.watched, p.to-watch {
      color:gray; font-style:italic;
      display:inline-block;
      
      + a.revert { padding:0 5px; }
    }
    a.revert { 
      color:#ccc; text-decoration:none;
      
      &:hover { color:firebrick; }
    }
    
    em.liked { color: green; }
    em.disliked { color: darkred; }
    
    &.fadeout { @include transition(opacity, 0.15s, ease-in); opacity: 0; }
    &.hidden { opacity: 0; }
    &.fadein { @include transition(opacity, 0.25s, ease-out); opacity: 1; }
    
    .no-js & {
      .add-watched { display: none; }
      .question a[href="#cancel"] { display: none; }
    }
    .js & {
      > div { @include transition(opacity, 0.2s, ease-out) }
      .question {
        display: none;
        opacity: 0;
        background-color: white;
        a[href="#cancel"] { text-decoration: underline; color: $lightblue; }
      }
      &.asking {
        .primary { display: none; opacity: 0; }
        .question { display: block; opacity: 1; }
      }
      &.asking-transition {
        .primary { position: absolute; opacity: 0; }
        .question {
          display: block;
          opacity: 1;
        }
      }
      &.asking-transition-back {
        .primary { position: absolute; opacity: 1; z-index: -1; }
        .question {
          display: block;
          opacity: 0;
        }
      }
    }
  }
}

/* movie details */
.movie-show .movie {
  margin-top:1.3em;
  
  padding-left: $poster-medium-width + $poster-margin;
  .poster {
    display:block;
    margin:.6em 0 1.2em (0 - $poster-medium-width - $poster-margin);
    float:left;
    
    + p {
      float: left; clear: left;
      margin-left: -($poster-medium-width + $poster-margin);
      width: $poster-medium-width;
    }
  }
  .actions {
    margin-top:1.3em;
    
    p { padding-top:4px; }
  }

  h1 { font-size:2.4em; line-height:1.25em; margin-bottom:.4em; }

  header {
    h1 + .year, h2 { font-size:1.5em; line-height:1.1; }
    .runtime {
      margin-left: .5em;
      padding:.2em .4em .1em .3em;
      line-height:1.3;
      @include border-radius;
      border: 1px solid rgba($lightblue, .5);
      color: darken($lightblue, 5);
      vertical-align: top;
    }
    .directors {
      margin:1.5em 0;
      strong { font-size:1.2em; font-weight:normal; @include text-shadow }
      a { text-decoration: none; }
      a:hover { text-decoration: underline; }
    }
    .countries { margin-top:0; display:inline-block; }
  }
  
  .plot { margin:3em 0 1.5em; max-width:50em; }
  
  .friends { font-style:italic; margin-top:1em; }
}

article > h1 + nav {
  margin: -2em 0 3em;
  a:link, a:visited { color:$lightblue; }
  p + p {
    margin-top: .5em;
    &:before { content: '▸ '; line-height: 1; }
    @include link-icon;
  }
}

.pagination {
  line-height: 1;
  em {
    font-style: normal;
    background: #aaa;
    @include border-radius(10px);
    display: inline-block;
    min-width: 1em;
    text-align: center;
    padding: 3px;
    color: white;
    @include text-shadow;
  }
  a { text-decoration: none; }
  a:hover { text-decoration: none; border-bottom: 1px solid silver; }
}

.users-list {
  article h1 { font-size: 2em; }
  ol {
    font-size: 1.4em;
    line-height: 2;
    li { margin-bottom: .5em; }
  }
}

.about > article {
  max-width: 48em;

  h2 {
    font: normal 1.2em $body-type; @include text-shadow;
    margin:2.35em 0 .65em;
  }

  p { margin-bottom:.8em; padding-top:.7em; }
  ul { margin:1.5em 0; }
}

.intro {
  border: 1px solid $lightblue-border;
  @include linear-gradient(color-stops($top-color-stop, $bottom-color-stop));
  @include border-radius(10px);

  font-size: 1.1em; line-height: 1.4em;
  padding:1.1em 1em 1em (10px + $body-padding);
  margin:2em 0 0 (0 - 10px - $body-padding); width:43.2em;
  
  p + p { margin-top:1em; }
  
  + p { margin-top:.7em; }
  
  body > article > &:first-child {
    position: relative; top: -2em;
  }
}

